kubernetes/services/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-server
  namespace: shared-services
spec:
  type: LoadBalancer
  selector:
    app: jenkins-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
