kubernetes/services/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vois-app-service
  namespace: production
spec:
  selector:
    app: vois-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
