kubernetes/services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: production
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: ImplementationSpecific
        backend:
          service:
            name: web-server-service
            port:
              number: 5000
